# motwee

./: CMakeLists.txt  flake.nix  motwee-config.cmake.in
include/: wsteasing.hpp
include/motwee/: back.hpp  bounce.hpp  circ.hpp  cubic.hpp  elastic.hpp  expo.hpp  linear.hpp  mode.hpp  motwee.hpp  quad.hpp  quart.hpp  quint.hpp  sample.hpp  sine.hpp  transform.hpp
src/: main.cpp
